增加Pwd,调试通过

--- a/config/quality.gradle
+++ b/config/quality.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'checkstyle'
 apply plugin: 'findbugs'
+apply plugin: 'pmd'
 
 check.dependsOn 'checkstyle', 'findbugs'
 
@@ -38,4 +39,25 @@ task findbugs(type: FindBugs, dependsOn: "assembleDebug") {
     }
 
     classpath = files()
+}
+
+task pmd(type: Pmd) {
+    ignoreFailures = false
+    ruleSetFiles = files("$configDir/pmd/pmd-ruleset.xml")
+    ruleSets = []
+
+    source 'src'
+    include '**/*.java'
+    exclude '**/gen/**'
+
+    reports {
+        xml.enabled = false
+        html.enabled = true
+        xml {
+            destination "$reportsDir/pmd/pmd.xml"
+        }
+        html {
+            destination "$reportsDir/pmd/pmd.html"
+        }
+    }
 }
