--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     implementation project(":library")
+
+    product_oneImplementation project(":libraryone")
+    product_twoImplementation project(":librarytwo")
+
 }
