--- a/config/quality.gradle
+++ b/config/quality.gradle
@@ -7,9 +7,17 @@ check.dependsOn 'checkstyle', 'findbugs', 'pmd', 'lint'
 def configDir = "${project.rootDir}/config/quality"
 def reportsDir = "${project.buildDir}/reports"
 
+checkstyle {
+    toolVersion = '5.9'
+}
+
 task checkstyle(type: Checkstyle) {
     configFile file("$configDir/checkstyle/checkstyle.xml")
     configProperties.checkstyleSuppressionsPath = file("$configDir/checkstyle/suppressions.xml").absolutePath
+
+    ignoreFailures false
+    showViolations true
+
     source 'src'
     include '**/*.java'
     exclude '**/gen/**'
